@@ -1,7 +1,7 @@
 /**
 	\file "main/guile.cc"
 	Main module for new CHPSIM.
-	$Id: guile.cc,v 1.3 2007/03/16 07:07:22 fang Exp $
+	$Id: guile.cc,v 1.4 2007/03/18 00:25:02 fang Exp $
  */
 
 #define	ENABLE_STACKTRACE			0
@@ -65,6 +65,7 @@ guile::main_interactive(void* closure, int argc, char** argv) {
 	scm_shell(argc, argv);	// read-eval-print
 	// never returns :S
 	// how the f--- am I supposed to clean up memory?
+	// A: atexit()
 }
 
 //- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -73,23 +74,10 @@ guile::main_interactive(void* closure, int argc, char** argv) {
  */
 void
 guile::main_script(void* closure, int argc, char** argv) {
-#if 0
-	const char* fname = argv[argc-1];
-	cout << "file: " << fname << endl;
-	std::ifstream f(fname);
-	if (!f) {
-		cerr << "Error opening file: " << fname << endl;
-		return;
-	}
-	f.close();
-	libhackt_guile_init();
-	scm_c_primitive_load(fname);
-#else
 	scm_c_eval_string("(set-repl-prompt! \"\")");	// disable-prompt
 	libhackt_guile_init();
 	scm_shell(argc, argv);	// read-eval-print
 	// never returns :S
-#endif
 }
 
 //- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
