@@ -5,6 +5,13 @@
 
 2007-03-17	David Fang		<fangism@users.sourceforge.net>
 
+	* HACKT-00-01-04-main-00-81-13:
+	  Noted major flaw in guile/C+++ interoperability in BUGS.
+	  New program: 'hacchpsimguile' intended for chpsim trace analysis.
+		Added: main/chpsim-guile.{cc,h}, guile/chpsim-wrap.{h,cc}
+	  TODO: export more functions and operations on chpsim state.
+
+
 	* HACKT-00-01-04-main-00-81-12:
 	  Critical fix: hackt lexer was corrupting pointer due to improper
 		pointer class assignment, which compiler SHOULD have rejected.
